--- a/ogogada-react/src/stylesheets/SignIn.css
+++ b/ogogada-react/src/stylesheets/SignIn.css
@@ -1,11 +1,15 @@
 .signInContainer {
-    background: #81A5D5;
-    background-size: 100% 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
+    background-image: url("../assets/base.png");
+    background-size:100% 100%;
 }
 
 .signInContainerBox {
